--- a/src/index.scss
+++ b/src/index.scss
@@ -1,12 +1,11 @@
+@import 'reset-css';
 html {
   height: 100%;
-  box-sizing: border-box;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  font-size: 16px;
 }
 
 code {
@@ -18,10 +17,9 @@ body,
 #root {
   height: 100%;
   margin: 0;
+  line-height: 1.4;
 }
 
-ul {
-  list-style: none;
-  margin: 0;
-  padding: 0;
+* {
+  box-sizing: border-box;
 }
